--- a/my-app/src/components/Card/Card.css
+++ b/my-app/src/components/Card/Card.css
@@ -16,7 +16,9 @@
     background:#6CADDC;
   }
   .card > .img-container > img {
-    width: 60%
+    height: 100%;
+    width: 100%
+
   }
   
   .card > .content {
